--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css" type="text/css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="app.js"></script>
 </head>
 <body>
-  <h1>Local Weather Report</h1>
+  <h1>Your Local Weather</h1>
+  <div class="cityName"></div>
   <div class="summary"></div>
   <div class="degrees"></div>
+  <div class="image"></div>
 </body>
-<script src="app.js"></script>
 </html>
